Actualizacions de niveles CAPC

--- a/TableroSLAs/Catalogos/AplicacionesLista.html
+++ b/TableroSLAs/Catalogos/AplicacionesLista.html
@@ -40,7 +40,7 @@ jQuery(function ($) {
 <link rel="stylesheet" type="text/css" href="../Styles/{CCS_Style}/jquery-ui.css">
 </head>
 <body>
-<p>&nbsp; 
+<p>{Header}&nbsp; 
 <table width="100%">
   <tr>
     <td>&nbsp;</td> 
