--- a/TableroSLAs/MainAdmin.html
+++ b/TableroSLAs/MainAdmin.html
@@ -18,9 +18,9 @@
     <td><a href="{Link6_Src}" id="Link6">No Medibles</a></td> 
     <td><a href="{Link5_Src}" id="Link5">Costo Fijo Mensual</a></td> 
     <td><a href="{Link7_Src}" id="Link7">Gráficas</a></td> 
-    <td><a href="{Link8_Src}" id="Link8">Reportes MyM</a></td> 
+    <td><!-- BEGIN Link Link8 --><a href="{Link8_Src}" id="Link8">Reportes MyM</a><!-- END Link Link8 --></td> 
     <td><a href="{Link4_Src}" id="Link4">Usuarios</a></td>
-    <td><a href="{Link9_Src}" id="Link9">Carga de Datos</a></td>
+    <td><!-- BEGIN Link Link9 --><a href="{Link9_Src}" id="Link9">Carga de Datos</a><!-- END Link Link9 --></td>
   </tr>
 </table>
 </p>
