--- a/TableroSLAs/PPMCsCrCalCodDetalle.html
+++ b/TableroSLAs/PPMCsCrCalCodDetalle.html
@@ -56,10 +56,10 @@
     <td>&nbsp; 
       <!-- BEGIN Record mc_info_rs_CC -->
       <form id="mc_info_rs_CC" method="post" name="{HTMLFormName}" action="{Action}">
-        <table class="MainTable" border="0" cellspacing="0" cellpadding="0">
+        <table class="MainTable" cellspacing="0" cellpadding="0" border="0">
           <tr>
             <td valign="top">
-              <table class="Header" border="0" cellspacing="0" cellpadding="0">
+              <table class="Header" cellspacing="0" cellpadding="0" border="0">
                 <tr>
                   <td class="HeaderLeft"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td> 
                   <td class="th"><strong>Calificar Calidad de Código</strong></td> 
@@ -85,12 +85,12 @@
  
                 <tr class="Controls">
                   <td class="th"><label for="mc_info_rs_CCPctReglas">% Calidad Reglas</label></td> 
-                  <td><input type="text" id="mc_info_rs_CCPctReglas" value="{PctReglas}" maxlength="5" size="5" name="{PctReglas_Name}"></td>
+                  <td><input type="text" id="mc_info_rs_CCPctReglas" maxlength="5" size="5" value="{PctReglas}" name="{PctReglas_Name}"></td>
                 </tr>
  
                 <tr class="Controls">
                   <td class="th">&nbsp;% Calidad Métricas</td> 
-                  <td><input type="text" id="mc_info_rs_CCPctMetricas" value="{PctMetricas}" maxlength="5" size="5" name="{PctMetricas_Name}"></td>
+                  <td><input type="text" id="mc_info_rs_CCPctMetricas" maxlength="5" size="5" value="{PctMetricas}" name="{PctMetricas_Name}"></td>
                 </tr>
  
                 <tr class="Controls">
@@ -111,8 +111,8 @@
                 <tr class="Bottom">
                   <td style="TEXT-ALIGN: right" colspan="2">
                     <p>
-                    <!-- BEGIN Button Button_Insert --><input type="submit" id="mc_info_rs_CCButton_Insert" class="Button" value="Agregar" alt="Agregar" name="{Button_Name}"><!-- END Button Button_Insert -->
-                    <!-- BEGIN Button Button_Update --><input type="submit" id="mc_info_rs_CCButton_Update" class="Button" value="Enviar" alt="Enviar" name="{Button_Name}"><!-- END Button Button_Update --><input type="hidden" id="mc_info_rs_CCUsuarioUltMod" value="{UsuarioUltMod}" name="{UsuarioUltMod_Name}"><input type="hidden" id="mc_info_rs_CCFechaUltMod" value="{FechaUltMod}" name="{FechaUltMod_Name}"><input type="hidden" id="mc_info_rs_CCId_PPMC_HID" value="{Id_PPMC_HID}" name="{Id_PPMC_HID_Name}"><input type="hidden" id="mc_info_rs_CCID_Estimacion_HID" value="{ID_Estimacion_HID}" name="{ID_Estimacion_HID_Name}"><label for="mc_info_rs_CCId_PPMC_HID" style="display: none;">&nbsp;</label></p>
+                    <!-- BEGIN Button Button_Insert --><input type="submit" id="mc_info_rs_CCButton_Insert" class="Button" alt="Agregar" value="Agregar" name="{Button_Name}"><!-- END Button Button_Insert -->
+                    <!-- BEGIN Button Button_Update --><input type="submit" id="mc_info_rs_CCButton_Update" class="Button" alt="Enviar" value="Enviar" name="{Button_Name}"><!-- END Button Button_Update --><input type="hidden" id="mc_info_rs_CCUsuarioUltMod" value="{UsuarioUltMod}" name="{UsuarioUltMod_Name}"><input type="hidden" id="mc_info_rs_CCFechaUltMod" value="{FechaUltMod}" name="{FechaUltMod_Name}"><input type="hidden" id="mc_info_rs_CCId_PPMC_HID" value="{Id_PPMC_HID}" name="{Id_PPMC_HID_Name}"><input type="hidden" id="mc_info_rs_CCID_Estimacion_HID" value="{ID_Estimacion_HID}" name="{ID_Estimacion_HID_Name}"><label for="mc_info_rs_CCId_PPMC_HID" style="display: none;">&nbsp;</label></p>
                   </td>
                 </tr>
               </table>
@@ -122,10 +122,10 @@
       </form>
       <!-- END Record mc_info_rs_CC --><br>
       <!-- BEGIN Grid CalidadCodigoMetricas -->
-      <table id="CalidadCodigoMetricas" class="MainTable" border="0" cellspacing="0" cellpadding="0">
+      <table id="CalidadCodigoMetricas" class="MainTable" cellspacing="0" cellpadding="0" border="0">
         <tr>
           <td valign="top">
-            <table class="HeaderAustere4" border="0" cellspacing="0" cellpadding="0">
+            <table class="HeaderAustere4" cellspacing="0" cellpadding="0" border="0">
               <tr>
                 <td class="HeaderLeftAustere4"><img alt="" src="Styles/Austere4/Images/Spacer.gif"></td> 
                 <td class="thAustere4"><strong>Metricas </strong></td> 
@@ -204,10 +204,10 @@
       </table>
       <!-- END Grid CalidadCodigoMetricas -->
       <!-- BEGIN Grid CalidadCodigoReglas -->
-      <table id="CalidadCodigoReglas" class="MainTable" border="0" cellspacing="0" cellpadding="0">
+      <table id="CalidadCodigoReglas" class="MainTable" cellspacing="0" cellpadding="0" border="0">
         <tr>
           <td valign="top">
-            <table class="HeaderAustere4" border="0" cellspacing="0" cellpadding="0">
+            <table class="HeaderAustere4" cellspacing="0" cellpadding="0" border="0">
               <tr>
                 <td class="HeaderLeftAustere4"><img alt="" src="Styles/Austere4/Images/Spacer.gif"></td> 
                 <td class="thAustere4"><strong>Reglas </strong></td> 
