--- a/TableroSLAs/SLAsCAPCLista.html
+++ b/TableroSLAs/SLAsCAPCLista.html
@@ -47,16 +47,17 @@
                 <tr>
                   <td class="HeaderLeft"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td> 
                   <td class="th"><strong>Buscar</strong></td> 
-                  <td class="HeaderRight"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td>
+                  <td class="HeaderRight"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td> 
                 </tr>
+ 
               </table>
  
               <table class="Record" cellspacing="0" cellpadding="0">
                 <!-- BEGIN Error -->
                 <tr id="{@error-block}" class="Error">
-                  <td colspan="8">{Error}</td>
+                  <td colspan="8">{Error}</td> 
                 </tr>
-                <!-- END Error -->
+ <!-- END Error -->
                 <tr class="Controls">
                   <td class="th"><label for="mc_calificacion_capcs_numero">PPMC</label></td> 
                   <td><input type="text" id="mc_calificacion_capcs_numero" maxlength="25" size="25" value="{s_numero}" name="{s_numero_Name}"></td> 
@@ -64,47 +65,50 @@
                   <td>
                     <select id="mc_calificacion_capcs_mes" name="{s_mes_Name}">
                       <option selected value="">Seleccionar Valor</option>
-                      {s_mes_Options}
+ {s_mes_Options} 
                     </select>
  </td> 
                   <td class="th"><label for="mc_calificacion_capcs_anio">Año</label></td> 
                   <td>
                     <select id="mc_calificacion_capcs_anio" name="{s_anio_Name}">
                       <option selected value="">Seleccionar Valor</option>
-                      {s_anio_Options}
+ {s_anio_Options} 
                     </select>
  </td> 
                   <td class="th"><label for="mc_calificacion_capcs_id_serviciocont">Servicio</label></td> 
                   <td>
                     <select id="mc_calificacion_capcs_id_serviciocont" name="{s_id_serviciocont_Name}">
                       <option selected value="">Seleccionar Valor</option>
-                      {s_id_serviciocont_Options}
+ {s_id_serviciocont_Options} 
                     </select>
- </td>
+ </td> 
                 </tr>
  
                 <tr class="Bottom">
                   <td style="TEXT-ALIGN: right" colspan="8">
-                    <!-- BEGIN Button Button_DoSearch --><input type="submit" id="mc_calificacion_capcButton_DoSearch" class="Button" alt="Buscar" value="Buscar" name="{Button_Name}"><!-- END Button Button_DoSearch --></td>
+                    <!-- BEGIN Button Button_DoSearch --><input type="submit" id="mc_calificacion_capcButton_DoSearch" class="Button" alt="Buscar" value="Buscar" name="{Button_Name}"><!-- END Button Button_DoSearch --></td> 
                 </tr>
+ 
               </table>
-            </td>
+ </td> 
           </tr>
+ 
         </table>
  
         <p><br>
         </p>
+ 
       </form>
  
       <p>&nbsp;</p>
-      <!-- END Record mc_calificacion_capc -->
+ <!-- END Record mc_calificacion_capc -->
       <p></p>
-    </td> 
+ </td> 
     <td>
       <div style="TEXT-ALIGN: center">
 <a href="{lkTableroExcelCAPC_Src}" id="lkTableroExcelCAPC"><img style="BORDER-LEFT-WIDTH: 0px; BORDER-RIGHT-WIDTH: 0px; VERTICAL-ALIGN: middle; BORDER-BOTTOM-WIDTH: 0px; BORDER-TOP-WIDTH: 0px; border-image: none" alt="{lkReporteExcel}" src="images/xls.jpg" width="20" height="20">&nbsp;Tablero Excel CAPC</a> 
       </div>
-    </td>
+ </td> 
   </tr>
  
   <tr>
@@ -117,8 +121,9 @@
               <tr>
                 <td class="HeaderLeft"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td> 
                 <td class="th"><strong>Detalle SLAs CAPC </strong></td> 
-                <td class="HeaderRight"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td>
+                <td class="HeaderRight"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td> 
               </tr>
+ 
             </table>
  
             <table class="Grid" cellspacing="0" cellpadding="0">
@@ -187,6 +192,7 @@
                 <!-- BEGIN Sorter Sorter_Observaciones --><span class="Sorter"><a href="{Sort_URL}" id="mc_c_ServContractual_mc_cSorter_Observaciones">Observaciones</a> 
                 <!-- BEGIN Asc_On --><img alt="Ascendente" src="Styles/{CCS_Style}/Images/Asc.gif"><!-- END Asc_On -->
                 <!-- BEGIN Desc_On --><img alt="Descendente" src="Styles/{CCS_Style}/Images/Desc.gif"><!-- END Desc_On --></span><!-- END Sorter Sorter_Observaciones --></th>
+ 
               </tr>
  
               <!-- BEGIN Row -->
@@ -195,28 +201,32 @@
                 <td><a href="{numero_Src}" id="mc_c_ServContractual_mc_cnumero_{mc_c_ServContractual_mc_c:rowNumber}">{numero}</a>&nbsp;</td> 
                 <td>{Descripcion}&nbsp;</td> 
                 <td><a href="{Agrupador_Src}" id="mc_c_ServContractual_mc_cAgrupador_{mc_c_ServContractual_mc_c:rowNumber}">{Agrupador}</a>&nbsp;</td> 
-                <td style="TEXT-ALIGN: center">{HERR_EST_COST}&nbsp;<img id="mc_c_ServContractual_mc_cImg_HERR_EST_COST_{mc_c_ServContractual_mc_c:rowNumber}" alt="" src="{Img_HERR_EST_COST}"></td> 
-                <td style="TEXT-ALIGN: center">{REQ_SERV}&nbsp;<img id="mc_c_ServContractual_mc_cImg_REQ_SERV_{mc_c_ServContractual_mc_c:rowNumber}" alt="" src="{Img_REQ_SERV}"></td> 
-                <td style="TEXT-ALIGN: center">{CUMPL_REQ_FUN}&nbsp;<img id="mc_c_ServContractual_mc_cImg_CUMPL_REQ_FUN_{mc_c_ServContractual_mc_c:rowNumber}" alt="" src="{Img_CUMPL_REQ_FUN}"></td> 
-                <td style="TEXT-ALIGN: center">{CALIDAD_PROD_TERM}&nbsp;<img id="mc_c_ServContractual_mc_cImg_CALIDAD_PROD_TERM_{mc_c_ServContractual_mc_c:rowNumber}" alt="" src="{Img_CALIDAD_PROD_TERM}"></td> 
-                <td style="TEXT-ALIGN: center">{DEDUC_OMISION}&nbsp;<img id="mc_c_ServContractual_mc_cImg_DEDUC_OMISION_{mc_c_ServContractual_mc_c:rowNumber}" alt="" src="{Img_DEDUC_OMISION}"></td> 
+                <td style="TEXT-ALIGN: center">{HERR_EST_COST}&nbsp; 
+                  <!-- BEGIN ImageLink Img_HERR_EST_COST --><a href="{Img_HERR_EST_COST}" id="mc_c_ServContractual_mc_cImg_HERR_EST_COST_{mc_c_ServContractual_mc_c:rowNumber}"><img src="{Img_HERR_EST_COST_Src}" style="border: 0px;" alt="{Img_HERR_EST_COST}"></a><!-- END ImageLink Img_HERR_EST_COST --></td> 
+                <td style="TEXT-ALIGN: center">{REQ_SERV}&nbsp; 
+                  <!-- BEGIN ImageLink Img_REQ_SERV --><a href="{Img_REQ_SERV}" id="mc_c_ServContractual_mc_cImg_REQ_SERV_{mc_c_ServContractual_mc_c:rowNumber}"><img src="{Img_REQ_SERV_Src}" style="border: 0px;" alt="{Img_REQ_SERV}"></a><!-- END ImageLink Img_REQ_SERV --></td> 
+                <td style="TEXT-ALIGN: center">{CUMPL_REQ_FUN}&nbsp;<a href="{Img_CUMPL_REQ_FUN}" id="mc_c_ServContractual_mc_cImg_CUMPL_REQ_FUN_{mc_c_ServContractual_mc_c:rowNumber}"><img src="{Img_CUMPL_REQ_FUN_Src}" style="border: 0px;" alt="{Img_CUMPL_REQ_FUN}"></a></td> 
+                <td style="TEXT-ALIGN: center">{CALIDAD_PROD_TERM}&nbsp;<a href="{Img_CALIDAD_PROD_TERM}" id="mc_c_ServContractual_mc_cImg_CALIDAD_PROD_TERM_{mc_c_ServContractual_mc_c:rowNumber}"><img src="{Img_CALIDAD_PROD_TERM_Src}" style="border: 0px;" alt="{Img_CALIDAD_PROD_TERM}"></a></td> 
+                <td style="TEXT-ALIGN: center">{DEDUC_OMISION}&nbsp;<a href="{Img_DEDUC_OMISION}" id="mc_c_ServContractual_mc_cImg_DEDUC_OMISION_{mc_c_ServContractual_mc_c:rowNumber}"><img src="{Img_DEDUC_OMISION_Src}" style="border: 0px;" alt="{Img_DEDUC_OMISION}"></a></td> 
                 <td style="TEXT-ALIGN: center">{EFIC_PRESUP}&nbsp;<img id="mc_c_ServContractual_mc_cImg_EFIC_PRESUP_{mc_c_ServContractual_mc_c:rowNumber}" alt="" src="{Img_EFIC_PRESUP}"></td> 
-                <td style="TEXT-ALIGN: center">{RETR_ENTREGABLE}&nbsp;<img id="mc_c_ServContractual_mc_cImg_RETR_ENTREGABLE_{mc_c_ServContractual_mc_c:rowNumber}" alt="" src="{Img_RETR_ENTREGABLE}"></td> 
-                <td>{Observaciones}&nbsp;</td>
+                <td style="TEXT-ALIGN: center">{RETR_ENTREGABLE}&nbsp;<a href="{Img_RETR_ENTREGABLE}" id="mc_c_ServContractual_mc_cImg_RETR_ENTREGABLE_{mc_c_ServContractual_mc_c:rowNumber}"><img src="{Img_RETR_ENTREGABLE_Src}" style="border: 0px;" alt="{Img_RETR_ENTREGABLE}"></a></td> 
+                <td>{Obs_AP}<br />
+                  {DetalleCalidad}<br />
+                  {Observaciones}&nbsp;</td> 
               </tr>
  <!-- END Row -->
               <!-- BEGIN NoRecords -->
               <tr class="NoRecords">
-                <td colspan="12">No hay registros</td>
+                <td colspan="12">No hay registros</td> 
               </tr>
-              <!-- END NoRecords -->
+ <!-- END NoRecords -->
               <tr class="Footer">
-                <td><a href="{Link2_Src}" id="mc_c_ServContractual_mc_cLink2_{mc_c_ServContractual_mc_c:rowNumber}">Agregar Medición de Apertura</a> <a href="{Link1_Src}" id="mc_c_ServContractual_mc_cLink1_{mc_c_ServContractual_mc_c:rowNumber}">Agregar Medición</a></td> 
+                <td>&nbsp;<a href="{Link1_Src}" id="mc_c_ServContractual_mc_cLink1_{mc_c_ServContractual_mc_c:rowNumber}">Agregar Medición</a></td> 
                 <td colspan="11">
                   <!-- BEGIN Navigator Navigator --><span class="Navigator">Registro por página 
                   <select style="VERTICAL-ALIGN: middle" name="{FormName}PageSize" data-grid-size="{FormName}">
                     <option selected value="">-</option>
- {PageSize_Options}
+ {PageSize_Options} 
                   </select>
  
                   <!-- BEGIN First_On --><a href="{First_URL}"><img alt="{First_URL}" src="Styles/{CCS_Style}/Images/First.gif"></a> <!-- END First_On -->
@@ -226,18 +236,20 @@
                   <!-- BEGIN Next_On --><a href="{Next_URL}"><img alt="{Next_URL}" src="Styles/{CCS_Style}/Images/Next.gif"></a> <!-- END Next_On -->
                   <!-- BEGIN Next_Off --><img alt="{Next_URL}" src="Styles/{CCS_Style}/Images/NextOff.gif"><!-- END Next_Off -->
                   <!-- BEGIN Last_On --><a href="{Last_URL}"><img alt="{Last_URL}" src="Styles/{CCS_Style}/Images/Last.gif"></a> <!-- END Last_On -->
-                  <!-- BEGIN Last_Off --><img alt="{Last_URL}" src="Styles/{CCS_Style}/Images/LastOff.gif"><!-- END Last_Off --></span><!-- END Navigator Navigator -->&nbsp;</td>
+                  <!-- BEGIN Last_Off --><img alt="{Last_URL}" src="Styles/{CCS_Style}/Images/LastOff.gif"><!-- END Last_Off --></span><!-- END Navigator Navigator -->&nbsp;</td> 
               </tr>
+ 
             </table>
-          </td>
+ </td> 
         </tr>
+ 
       </table>
-      <!-- END Grid mc_c_ServContractual_mc_c --></td>
+ <!-- END Grid mc_c_ServContractual_mc_c --></td> 
   </tr>
  
   <tr>
     <td>&nbsp;</td> 
-    <td>&nbsp;</td>
+    <td>&nbsp;</td> 
   </tr>
 </table>
 <p><br>
