se agregaron los botones de ampliar y normalizar
se agregaron los botones de ampliar y normalizar pantalla de reportes

--- a/TableroSLAs/Header.html
+++ b/TableroSLAs/Header.html
@@ -1,51 +1,54 @@
 <meta content="text/html; charset=windows-1252" http-equiv="Content-Type">
-<table style="BACKGROUND-COLOR: rgb(242,242,243)" width="100%" border="0">
+<table style="BACKGROUND-COLOR: rgb(242,242,243)" border="0" width="100%">
   <tr style="HEIGHT: 80px">
-    <td><a href="{ImageLink1}" id="HeaderImageLink1"><img style="BORDER-LEFT-WIDTH: 0px; BORDER-RIGHT-WIDTH: 0px; BORDER-BOTTOM-WIDTH: 0px; BORDER-TOP-WIDTH: 0px" alt="{ImageLink1}" src="{hdLogoPath}" width="215" height="100"></a> </td> 
+    <td><a href="{ImageLink1}" id="HeaderImageLink1"><img style="BORDER-RIGHT-WIDTH: 0px; BORDER-TOP-WIDTH: 0px; BORDER-BOTTOM-WIDTH: 0px; BORDER-LEFT-WIDTH: 0px" alt="{ImageLink1}" src="{hdLogoPath}" width="215" height="100"></a> </td> 
     <td width="40%"><input type="hidden" id="HeaderhdLogoPath" value="{hdLogoPath}" name="{hdLogoPath_Name}">
-      <div style="text-align:center;FONT-SIZE: 20px; font-weight:bold;color:rgb(48,114,29)">
-        Administración Central de Desarrollo<br>y Mantenimiento de Aplicaciones <br><br> Soporte, Desarrollo y Mantenimiento de Aplicaciones – 4
+      <div style="TEXT-ALIGN: center; COLOR: rgb(48,114,29); FONT-SIZE: 20px; FONT-WEIGHT: bold">
+        Administración Central de Desarrollo<br>
+        y Mantenimiento de Aplicaciones <br>
+        <br>
+        Soporte, Desarrollo y Mantenimiento de Aplicaciones – 4 
       </div>
  </td> 
     <td>
       <!-- BEGIN Panel pnlMenu -->
-      <table style="FONT-WEIGHT: bold; COLOR: rgb(0,122,173); BACKGROUND-COLOR: rgb(218,224,228)">
+      <table style="BACKGROUND-COLOR: rgb(218,224,228); COLOR: rgb(0,122,173); FONT-WEIGHT: bold">
         <tr style="HEIGHT: 60px">
           <td>
-            <div style="FONT-SIZE: 12px; HEIGHT: 40px; WIDTH: 100px; VERTICAL-ALIGN: bottom; COLOR: #ffffff; TEXT-ALIGN: center; BACKGROUND-COLOR: #ffffff">
-<a href="{lkUniverso_Src}" id="HeaderpnlMenulkUniverso" style="POSITION: relative; TOP: 20%">Universo de Medición</a> 
+            <div style="TEXT-ALIGN: center; BACKGROUND-COLOR: #ffffff; WIDTH: 100px; HEIGHT: 40px; COLOR: #ffffff; FONT-SIZE: 12px; VERTICAL-ALIGN: bottom">
+<a href="{lkUniverso_Src}" style="POSITION: relative; TOP: 20%" id="HeaderpnlMenulkUniverso">Universo de Medición</a> 
             </div>
  </td> 
           <td>
-            <div style="FONT-SIZE: 12px; HEIGHT: 40px; WIDTH: 100px; VERTICAL-ALIGN: bottom; COLOR: #ffffff; TEXT-ALIGN: center; BACKGROUND-COLOR: #ffffff">
-<a href="{lkIncidentes_Src}" id="HeaderpnlMenulkIncidentes" style="POSITION: relative; TOP: 20%">Incidentes</a> 
+            <div style="TEXT-ALIGN: center; BACKGROUND-COLOR: #ffffff; WIDTH: 100px; HEIGHT: 40px; COLOR: #ffffff; FONT-SIZE: 12px; VERTICAL-ALIGN: bottom">
+<a href="{lkIncidentes_Src}" style="POSITION: relative; TOP: 20%" id="HeaderpnlMenulkIncidentes">Incidentes</a> 
             </div>
  </td> 
           <td>
-            <div style="FONT-SIZE: 12px; HEIGHT: 40px; WIDTH: 100px; VERTICAL-ALIGN: bottom; COLOR: #ffffff; TEXT-ALIGN: center; BACKGROUND-COLOR: #ffffff">
-<a href="{lkRequerimientos_Src}" id="HeaderpnlMenulkRequerimientos" style="POSITION: relative; TOP: 20%">SLAs de Apertura</a> 
+            <div style="TEXT-ALIGN: center; BACKGROUND-COLOR: #ffffff; WIDTH: 100px; HEIGHT: 40px; COLOR: #ffffff; FONT-SIZE: 12px; VERTICAL-ALIGN: bottom">
+<a href="{lkRequerimientos_Src}" style="POSITION: relative; TOP: 20%" id="HeaderpnlMenulkRequerimientos">SLAs de Apertura</a> 
             </div>
  </td> 
           <td>
-            <div style="FONT-SIZE: 12px; HEIGHT: 40px; WIDTH: 100px; VERTICAL-ALIGN: bottom; COLOR: #ffffff; TEXT-ALIGN: center; BACKGROUND-COLOR: #ffffff">
-<a href="{lkPPMCCierre_Src}" id="HeaderpnlMenulkPPMCCierre" style="POSITION: relative; TOP: 20%">SLAs de Cierre</a> 
+            <div style="TEXT-ALIGN: center; BACKGROUND-COLOR: #ffffff; WIDTH: 100px; HEIGHT: 40px; COLOR: #ffffff; FONT-SIZE: 12px; VERTICAL-ALIGN: bottom">
+<a href="{lkPPMCCierre_Src}" style="POSITION: relative; TOP: 20%" id="HeaderpnlMenulkPPMCCierre">SLAs de Cierre</a> 
             </div>
  </td> 
           <td>
-            <div style="FONT-SIZE: 12px; HEIGHT: 40px; WIDTH: 100px; VERTICAL-ALIGN: bottom; COLOR: #ffffff; TEXT-ALIGN: center; BACKGROUND-COLOR: #ffffff">
-<a href="{Link2_Src}" id="HeaderpnlMenuLink2" style="POSITION: relative; TOP: 20%">Eficiencia<br>
+            <div style="TEXT-ALIGN: center; BACKGROUND-COLOR: #ffffff; WIDTH: 100px; HEIGHT: 40px; COLOR: #ffffff; FONT-SIZE: 12px; VERTICAL-ALIGN: bottom">
+<a href="{Link2_Src}" style="POSITION: relative; TOP: 20%" id="HeaderpnlMenuLink2">Eficiencia<br>
               Presupuestal</a> 
             </div>
  </td> 
           <td>
-            <div style="FONT-SIZE: 12px; HEIGHT: 40px; WIDTH: 100px; VERTICAL-ALIGN: bottom; COLOR: #ffffff; TEXT-ALIGN: center; BACKGROUND-COLOR: #ffffff">
-              <!-- BEGIN Link Link3 --><a href="{Link3_Src}" id="HeaderpnlMenuLink3" style="POSITION: relative; TOP: 20%">SLAs CAPC</a><!-- END Link Link3 -->
+            <div style="TEXT-ALIGN: center; BACKGROUND-COLOR: #ffffff; WIDTH: 100px; HEIGHT: 40px; COLOR: #ffffff; FONT-SIZE: 12px; VERTICAL-ALIGN: bottom">
+              <!-- BEGIN Link Link3 --><a href="{Link3_Src}" style="POSITION: relative; TOP: 20%" id="HeaderpnlMenuLink3">SLAs CAPC</a><!-- END Link Link3 -->
             </div>
  </td> 
           <td>
             <!-- BEGIN Panel pnlMenuAdmin -->
-            <div style="FONT-SIZE: 12px; HEIGHT: 40px; WIDTH: 100px; VERTICAL-ALIGN: bottom; COLOR: #ffffff; TEXT-ALIGN: center; BACKGROUND-COLOR: #ffffff">
-              <!-- BEGIN Link lkAdmin --><a href="{lkAdmin_Src}" id="HeaderpnlMenupnlMenuAdminlkAdmin" style="POSITION: relative; TOP: 20%">Admin</a><!-- END Link lkAdmin -->
+            <div style="TEXT-ALIGN: center; BACKGROUND-COLOR: #ffffff; WIDTH: 100px; HEIGHT: 40px; COLOR: #ffffff; FONT-SIZE: 12px; VERTICAL-ALIGN: bottom">
+              <!-- BEGIN Link lkAdmin --><a href="{lkAdmin_Src}" style="POSITION: relative; TOP: 20%" id="HeaderpnlMenupnlMenuAdminlkAdmin">Admin</a><!-- END Link lkAdmin -->
             </div>
  <!-- END Panel pnlMenuAdmin --></td> 
         </tr>
@@ -63,12 +66,12 @@
     <table>
       <tr>
         <td>
-          <div style="FONT-SIZE: 12px; HEIGHT: 20px; WIDTH: 100px; COLOR: #444444; MARGIN-LEFT: 7px; BACKGROUND-COLOR: #ffffff">
+          <div style="BACKGROUND-COLOR: #ffffff; WIDTH: 100px; HEIGHT: 20px; COLOR: #444444; MARGIN-LEFT: 7px; FONT-SIZE: 12px">
 <a href="{Link4_Src}" id="HeaderPanel2Link4">Tablero SLAs</a> 
           </div>
  </td> 
         <td>
-          <div style="FONT-SIZE: 12px; HEIGHT: 20px; WIDTH: 125px; COLOR: #444444; MARGIN-LEFT: 7px; BACKGROUND-COLOR: #ffffff">
+          <div style="BACKGROUND-COLOR: #ffffff; WIDTH: 125px; HEIGHT: 20px; COLOR: #444444; MARGIN-LEFT: 7px; FONT-SIZE: 12px">
 <a href="{Link5_Src}" id="HeaderPanel2Link5">Métricas y Mediciones</a> 
           </div>
  </td> 
@@ -78,16 +81,18 @@
  <!-- END Panel Panel2 --></td> 
   <td>
     <!-- BEGIN Panel Panel1 -->
-    <table style="BORDER-LEFT-WIDTH: 1px; BORDER-RIGHT-WIDTH: 1px; BORDER-BOTTOM-WIDTH: 0px; PADDING-BOTTOM: 0px; PADDING-TOP: 0px; PADDING-LEFT: 0px; PADDING-RIGHT: 0px; BORDER-TOP-WIDTH: 0px" width="297">
+    <table style="PADDING-BOTTOM: 0px; BORDER-RIGHT-WIDTH: 1px; PADDING-LEFT: 0px; PADDING-RIGHT: 0px; BORDER-TOP-WIDTH: 0px; BORDER-BOTTOM-WIDTH: 0px; BORDER-LEFT-WIDTH: 1px; PADDING-TOP: 0px" width="437">
       <tr style="HEIGHT: 24px">
-        <td style="FONT-SIZE: 10px; WIDTH: 25%; FONT-WEIGHT: bold; COLOR: rgb(0,122,173); BACKGROUND-COLOR: rgb(222,222,213)">
-          <div style="HEIGHT: 24px; COLOR: #444444; MARGIN-LEFT: 7px; BACKGROUND-COLOR: #ffffff">
+        <td>
+          <!-- BEGIN ImageLink img_abre_pantalla --><a href="{img_abre_pantalla}" id="HeaderPanel1img_abre_pantalla"><img style="BORDER-BOTTOM: 0px; BORDER-LEFT: 0px; BORDER-TOP: 0px; BORDER-RIGHT: 0px" alt="{img_abre_pantalla}" src="images/abre_verde.jpg" height="25" whidth="25"><font style="FONT-SIZE: 12px; font-color: green; font-weigth: bold">Ver pantalla completa</font></a> <!-- END ImageLink img_abre_pantalla --></td> 
+        <td style="BACKGROUND-COLOR: rgb(222,222,213); WIDTH: 30%; COLOR: rgb(0,122,173); FONT-SIZE: 10px; FONT-WEIGHT: bold">
+          <div style="BACKGROUND-COLOR: #ffffff; HEIGHT: 24px; COLOR: #444444; MARGIN-LEFT: 7px">
             <img style="MARGIN-TOP: 5px" src="{imgUserPath}"></img>&nbsp;&nbsp;Usuario:&nbsp;<a href="{lSesion_Src}" id="HeaderPanel1lSesion">{lSesion}</a> 
           </div>
  </td> 
-        <td style="FONT-SIZE: 10px; WIDTH: 30%; FONT-WEIGHT: bold; COLOR: rgb(0,122,173); BACKGROUND-COLOR: rgb(222,222,213)">
-          <div style="HEIGHT: 24px; MARGIN-LEFT: 0px; BACKGROUND-COLOR: #ffffff">
-            &nbsp;<img id="HeaderImage1" style="MARGIN-TOP: 5px" alt="Cerrar Sesión" src="{imgCierrePath}">&nbsp; <a href="{Link1_Src}" id="HeaderPanel1Link1">Cerrar Sesión</a> <img style="MARGIN-TOP: 0px; MARGIN-RIGHT: -2px" src="{imgCierre2Path}">
+        <td style="BACKGROUND-COLOR: rgb(222,222,213); WIDTH: 30%; COLOR: rgb(0,122,173); FONT-SIZE: 10px; FONT-WEIGHT: bold">
+          <div style="BACKGROUND-COLOR: #ffffff; HEIGHT: 24px; MARGIN-LEFT: 0px">
+            &nbsp;<img style="MARGIN-TOP: 5px" id="HeaderImage1" alt="Cerrar Sesión" src="{imgCierrePath}">&nbsp; <a href="{Link1_Src}" id="HeaderPanel1Link1">Cerrar Sesión</a> 
           </div>
  </td> 
       </tr>
