--- a/TableroSLAs/comparativo.html
+++ b/TableroSLAs/comparativo.html
@@ -202,7 +202,7 @@ function deleteCookie(name, path, domain) {
     </tr>
   </table>
 </div>
-<div class="tabber">
+<div class="tabber2">
   <table>
     <tr>
       <td style="VERTICAL-ALIGN: top"><br>
